--- a/GeoIP2.UnitTests/packages.config
+++ b/GeoIP2.UnitTests/packages.config
@@ -1,12 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
-  <package id="MaxMind.Db" version="1.2.0" targetFramework="net452" />
-  <package id="Microsoft.Bcl" version="1.1.7" targetFramework="net452" />
-  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net452" />
-  <package id="Microsoft.Net.Http" version="2.1.10" targetFramework="net452" />
+  <package id="MaxMind.Db" version="2.0.0-beta1" targetFramework="net452" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net452" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net452" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net452" />
   <package id="MockHttpSigned" version="1.2.1" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
   <package id="NSubstitute" version="1.9.2.0" targetFramework="net452" />
-  <package id="NUnit" version="3.0.0" targetFramework="net452" />
+  <package id="NUnit" version="3.0.1" targetFramework="net452" />
 </packages>
