--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,19 @@
+---
+sudo: false
 language: csharp
-
 before_install:
   - git submodule update --init --recursive
   - nuget restore GeoIP2.sln
   - nuget install NUnit.Console -Version 3.0.0
-
 script:
   - xbuild /p:TargetFrameworkVersion="v4.5"
   - mono ./NUnit.Console.3.0.0/tools/nunit3-console.exe ./GeoIP2.UnitTests/bin/Debug/MaxMind.GeoIP2.UnitTests.dll
-
-sudo: false
-
 notifications:
   email:
+    on_failure: always
+    on_success: change
     recipients:
       - dev-ci@maxmind.com
-    on_success: change
-    on_failure: always
+  slack:
+    rooms:
+      secure: "IsbtLth0Yv5VcmUAR2wslanuzGkKVSsGIAKhT71rCimi3QAe/02MYqZsRvgcFdwSnRsrWqdIDQ2x1Rw7YT5k7TBUfr4TL2/KnP3dwgmCyfSQojsHXlwofnWGezkgYrat7rV2HvcboFF1WXf0lENA8RzmiCi0t2BWh4dl7kdPuSs=\n"
