--- a/GeoIP2/GeoIP2.csproj
+++ b/GeoIP2/GeoIP2.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Responses\AbstractResponse.cs" />
     <Compile Include="Responses\CityResponse.cs" />
     <Compile Include="Responses\AnonymousIPResponse.cs" />
+    <Compile Include="Responses\EnterpriseResponse.cs" />
     <Compile Include="Responses\IspResponse.cs" />
     <Compile Include="Responses\ConnectionTypeResponse.cs" />
     <Compile Include="Responses\DomainResponse.cs" />
