--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,71 @@
 ---
-os: Visual Studio 2015 RC
-before_build:
-  - appveyor DownloadFile https://raw.githubusercontent.com/appveyor/ci/master/scripts/nuget-restore.cmd
-  - nuget-restore
-  - nuget install NUnit.Console -version 3.0.0
+version: '1.0.{build}'
+
+os: Visual Studio 2015
+
+environment:
+  matrix:
+    - CLI_VERSION: 1.0.0-preview2-002710
+      Configuration: Debug
+      Framework: net45
+    - CLI_VERSION: 1.0.0-preview2-002710
+      Configuration: Release
+      Framework: net45
+    - CLI_VERSION: 1.0.0-preview2-002710
+      Configuration: Debug
+      Framework: netcoreapp1.0
+    - CLI_VERSION: 1.0.0-preview2-002710
+      Configuration: Release
+      Framework: netcoreapp1.0
+
 install:
+  # Download install script to install .NET cli in .dotnet dir
+  - ps: |
+      mkdir -f scripts/ > $null
+
+      # Download install script from CLI repo
+      wget https://raw.githubusercontent.com/dotnet/cli/rel/1.0.0/scripts/obtain/install.ps1 -OutFile .\scripts\install.ps1
+
+      $DOTNET_INSTALL_DIR = "$pwd\.dotnetcli"
+
+      .\scripts\install.ps1 -Channel preview -version $env:CLI_VERSION -InstallDir "$DOTNET_INSTALL_DIR" -NoPath
+
+      # add dotnet to PATH
+      $env:Path = "$DOTNET_INSTALL_DIR;$env:Path"
+
+build_script:
   - git submodule update --init --recursive
-  - set PATH=C:\Program Files (x86)\MSBuild\14.0\Bin;%PATH%
+  - ps: |
+      if (gcm dotnet -errorAction SilentlyContinue) {
+        echo "Using dotnet '$((gcm dotnet).Path)'"
+        dotnet --info
+      }
+      else {
+        echo "dotnet.exe not found"
+        exit 1
+      }
+
+      # dotnet restore
+      dotnet restore
+
+      if($env:Framework -eq "net45") {
+        $FrameworkLibsMoniker = "net45"
+      } else {
+        $FrameworkLibsMoniker = "netstandard1.4"
+      }
+
+      # Build projects 
+      dotnet build -c $env:Configuration -f $FrameworkLibsMoniker .\GeoIP2
+      dotnet build -c $env:Configuration -f $env:Framework .\GeoIP2.Benchmark
+      dotnet build -c $env:Configuration -f $env:Framework .\GeoIP2.UnitTests
+
 test_script:
-  - NUnit.Console.3.0.0\tools\nunit3-console.exe "C:\projects\geoip2-dotnet\GeoIP2.UnitTests\bin\Debug\MaxMind.GeoIP2.UnitTests.dll"
+  - ps: |
+      # Run tests
+      cd .\GeoIP2.UnitTests
+
+      dotnet run -f $env:Framework
+
 notifications:
   - auth_token:
       secure: X+ymndzchVeC2LYsehzOt/GEMFfZJeTENeAU9lwNwTuCxBXFJNkuwZLd9joAtHgykHQoYqmEv/nH64+MA6nTlw==
