--- a/GeoIP2/project.json
+++ b/GeoIP2/project.json
@@ -1,26 +1,27 @@
-﻿{
-  "version": "2.7.0-*",
+{
+  "version": "2.7.0-beta2",
   "name": "MaxMind.GeoIP2",
   "description": "MaxMind GeoIP2 Database Reader and Web Service Client",
   "packOptions": {
-    "authors": ["MaxMind, Inc."],
-    "tags": [""],
+    "authors": [
+      "MaxMind, Inc."
+    ],
+    "tags": [
+      ""
+    ],
     "projectUrl": "https://github.com/maxmind/GeoIP2-dotnet",
     "licenseUrl": "https://github.com/maxmind/GeoIP2-dotnet/blob/master/LICENSE",
     "copyright": "Copyright © 2013-2016"
   },
-
   "buildOptions": {
     "keyFile": "../MaxMind.snk",
     "outputName": "MaxMind.GeoIP2",
     "xmlDoc": true
   },
-
   "dependencies": {
     "MaxMind.Db": "2.1.1-*",
     "Newtonsoft.Json": "9.0.1-beta1"
   },
-
   "frameworks": {
     "net45": {
       "dependencies": {
@@ -36,7 +37,7 @@
         "System.IO.MemoryMappedFiles": "4.0.0-rc2-24027",
         "System.Linq": "4.1.0-rc2-24027",
         "System.Linq.Expressions": "4.0.11-rc2-24027",
-        "System.Net.Http":  "4.0.1-rc2-24027",
+        "System.Net.Http": "4.0.1-rc2-24027",
         "System.Net.Primitives": "4.0.11-rc2-24027",
         "System.Net.Requests": "4.0.11-rc2-24027",
         "System.Reflection": "4.1.0-rc2-24027",
