Update MockHttp and enable corresponding tests Now with NetStandard moniker, 95 tests run. Before this change, 29 tests were running with the said TFM.
Net45 moniker is testing all 162 tests.

--- a/GeoIP2.UnitTests/project.json
+++ b/GeoIP2.UnitTests/project.json
@@ -24,15 +24,12 @@
     "GeoIP2": {
       "target": "project"
     },
-    "NUnitLite": "3.2.1"
+    "NUnitLite": "3.2.1",
+    "MockHttpSigned": "1.3.0-netstandard-alpha3"
   },
 
   "frameworks": {
-    "net45": {
-      "dependencies": {
-        "MockHttpSigned": "1.2.1"
-      }
-    },
+    "net45": {},
     "netcoreapp1.0": {
       "imports": "dnxcore50",
       "dependencies": {
