--- a/GeoIP2.UnitTests/project.json
+++ b/GeoIP2.UnitTests/project.json
@@ -11,8 +11,8 @@
     "GeoIP2": {
       "target": "project"
     },
-    "NUnit": "3.4.0",
-    "dotnet-test-nunit": "3.4.0-beta-1",
+    "NUnit": "3.5.0",
+    "dotnet-test-nunit": "3.4.0-beta-3",
     "MockHttpSigned": "1.3.0-netstandard-alpha3"
   },
 
@@ -25,7 +25,7 @@
       "dependencies": {
         "Microsoft.NETCore.App": {
           "type": "platform",
-          "version": "1.0.0"
+          "version": "1.*"
         }
       }
     }
