--- a/GeoIP2/project.json
+++ b/GeoIP2/project.json
@@ -32,7 +32,7 @@
     "xmlDoc": true
   },
   "dependencies": {
-    "MaxMind.Db": "2.1.2-*",
+    "MaxMind.Db": "2.1.3",
     "Newtonsoft.Json": "9.0.1"
   },
   "frameworks": {
@@ -43,25 +43,15 @@
     },
     "netstandard1.4": {
       "dependencies": {
-        "Microsoft.CSharp": "4.0.1",
-        "System.Collections": "4.0.11",
-        "System.Collections.Concurrent": "4.0.12",
-        "System.Globalization": "4.0.11",
-        "System.IO.MemoryMappedFiles": "4.0.0",
-        "System.Linq": "4.1.0",
-        "System.Linq.Expressions": "4.1.0",
-        "System.Net.Http": "4.1.0",
-        "System.Net.Primitives": "4.0.11",
-        "System.Net.Requests": "4.0.11",
-        "System.Reflection": "4.1.0",
-        "System.Reflection.Extensions": "4.0.1",
-        "System.Reflection.TypeExtensions": "4.1.0",
-        "System.Resources.ResourceManager": "4.0.1",
-        "System.Runtime": "4.1.0",
-        "System.Runtime.Extensions": "4.1.0",
-        "System.Runtime.Numerics": "4.0.1",
-        "System.Runtime.Serialization.Primitives": "4.1.1",
-        "System.Threading": "4.0.11"
+        "Microsoft.CSharp": "4.3.0",
+        "System.Collections": "4.3.0",
+        "System.Globalization": "4.3.0",
+        "System.Linq": "4.3.0",
+        "System.Linq.Expressions": "4.3.0",
+        "System.Net.Http": "4.3.0",
+        "System.Net.Primitives": "4.3.0",
+        "System.Net.Requests": "4.3.0",
+        "System.Threading": "4.3.0"
       }
     }
   }
